# goldsrc-godot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  check_missing_textures.py  project.godot  test_clip_hull.cpp
.github/workflows/: ci.yml
addons/goldsrc/: goldsrc.gdextension  plugin.cfg  plugin.gd
addons/goldsrc/importer/: bsp_importer.gd  mdl_importer.gd  spr_importer.gd  wad_importer.gd
demo/: check_spr.gd  fly_camera.gd  fps_camera.gd  project.godot  test.tscn  test_load.gd
demo/addons/goldsrc/: goldsrc.gdextension  plugin.gd
docs/: clip-hull-collision.md
maps/: ww_ravine.bsp  ww_ravine.bsp.import
src/: CMakeLists.txt  bsp_hull.cpp  bsp_hull.h  register_types.cpp  register_types.h  test_hull_csg.cpp
src/nodes/: goldsrc_bsp.cpp  goldsrc_bsp.h  goldsrc_mdl.cpp  goldsrc_mdl.h  goldsrc_spr.cpp  goldsrc_spr.h  goldsrc_wad.cpp  goldsrc_wad.h  visibility_manager.cpp  visibility_manager.h  zone_manager.cpp  zone_manager.h  zone_map.cpp  zone_map.h
src/parsers/: bsp_parser.cpp  bsp_parser.h  mdl_parser.cpp  mdl_parser.h  spr_parser.cpp  spr_parser.h  texture_decode.h  wad_parser.cpp  wad_parser.h
tests/: CMakeLists.txt  test_parsers.cpp
tests/ingame/: main.gd  main.tscn  run.sh  suite.gd
tests/ingame/suites/: suite_bsp_entities.gd  suite_bsp_load.gd  suite_bsp_mesh.gd  suite_bsp_query.gd  suite_lightstyles.gd  suite_mdl_wad.gd  suite_spr.gd
tools/: batch_convert_bsp.gd  check_clip_hulls.py
